bssm 1.0.2 (Release date: )
==============

   * Fixed few typos in vignette (thanks Kyle Hussman)
   * Reduced runtime of MCMC in growth model vignette as requested by CRAN.
   * Fixed a bug with bsm models with covariates, where all standard deviation parameters were fixed. 
     This resulted error within MCMC algorithms.
   * Fixed some docs.

bssm 1.0.1-1 (Release date: 2020-11-12)
==============

  * Added an argument `future` for predict method which allows 
    predictions for current time points by supplying the original model 
    (e.g., for posterior predictive checks). 
    At the same time the argument name `future_model` was changed to `model`.
  * Fixed a bug in summary.mcmc_run which resulted error when 
    trying to obtain summary for states only.
  * Added a check for Kalman filter for a degenerate case where all 
    observational level and state level variances are zero.
  * Renamed argument `n_threads` to `threads` for consistency 
    with `iter` and `burnin` arguments.
  * Improved documentation, added examples.
  * Added a vignette regarding psi-APF for non-linear models.
  
bssm 1.0.0 (Release date: 2020-06-09)
==============
Major update

  * Major changes for model definitions, now model updating and priors 
    can be defined via R functions (non-linear and SDE models still rely on C++ snippets).
  * Added support for multivariate non-Gaussian models.
  * Added support for gamma distributions.
  * Added the function as.data.frame for mcmc output which converts the MCMC samples 
    to data.frame format for easier post-processing.
  * Added truncated normal prior.
  * Many argument names and model building functions have been changed for clarity and consistency.
  * Major overhaul of C++ internals which can bring minor efficiency gains and smaller installation size.
  * Allow zero as initial value for positive-constrained parameters of bsm models.
  * Small changes to summary method which can now return also only summaries of the states.