@@ -1,8 +1,8 @@
 Package: bssm
 Type: Package
 Title: Bayesian Inference of Non-Gaussian State Space Models
-Version: 1.0.1-1
-Date: 2020-11-11
+Version: 1.0.2
+Date: 2021-01-08
 Authors@R: 
     c(person(given = "Jouni",
            family = "Helske",
