@@ -1,7 +1,8 @@
 #' Importance Sampling from non-Gaussian State Space Model
 #'
 #' Returns \code{nsim} samples from the approximating Gaussian model with corresponding
-#' (scaled) importance weights.
+#' (scaled) importance weights. Probably mostly useful for comparing KFAS and bssm packages.
+#' 
 #' @param model of class \code{bsm_ng}, \code{ar1_ng} \code{svm}, \code{ssm_ung}, or \code{ssm_mng}.
 #' @param nsim Number of samples.
 #' @param use_antithetic Logical. If \code{TRUE} (default), use antithetic 
@@ -14,6 +15,21 @@
 #' @param ... Ignored.
 #' @export
 #' @rdname importance_sample
+#' @examples 
+#' data("sexratio", package = "KFAS")
+#' model <- bsm_ng(sexratio[, "Male"], sd_level = 0.001, u = sexratio[, "Total"],
+#'   distribution = "binomial")
+#' 
+#' imp <- importance_sample(model, nsim = 1000)
+#' 
+#' est <- matrix(NA, 3, nrow(sexratio))
+#' for(i in 1:ncol(est)) {
+#'   est[, i] <- Hmisc::wtd.quantile(exp(imp$alpha[i, 1, ]), imp$weights, 
+#'     prob = c(0.05,0.5,0.95), normwt=TRUE)
+#' }
+#' 
+#' ts.plot(t(est),lty = c(2,1,2))
+#' 
 importance_sample <- function(model, nsim, use_antithetic, 
   max_iter, conv_tol, seed, ...) {
   UseMethod("importance_sample", model)
