@@ -22,3 +22,12 @@ Object of class \code{ssm_ulg}, \code{ssm_mlg}, \code{ssm_ung} or \code{ssm_mng}
 Converts \code{SSModel} object of \code{KFAS} package to general
 \code{bssm} model of type \code{ssm_ulg}, \code{ssm_mlg}, \code{ssm_ung} or \code{ssm_mng}.
 }
+\examples{
+library("KFAS")
+model_KFAS <- SSModel(Nile ~
+  SSMtrend(1, Q = 2, P1 = 1e4), H = 2)
+model_bssm <- as_bssm(model_KFAS)  
+logLik(model_KFAS)
+logLik(model_bssm)
+
+}
