@@ -17,7 +17,7 @@
   gamma = 2/3,
   target_acceptance = 0.234,
   S,
-  end_adaptive_phase = TRUE,
+  end_adaptive_phase = FALSE,
   threads = 1,
   seed = sample(.Machine$integer.max, size = 1),
   ...
@@ -68,7 +68,7 @@ distribution is \eqn{SS'}. Note that for some parameters
 (currently the standard deviation and dispersion parameters of bsm_ng models) the sampling
 is done for transformed parameters with internal_theta = log(theta).}
 
-\item{end_adaptive_phase}{If \code{TRUE} (default), S is held fixed after the burnin period.}
+\item{end_adaptive_phase}{If \code{TRUE}, S is held fixed after the burnin period. Default is \code{FALSE}.}
 
 \item{threads}{Number of threads for state simulation.}
 
